update annotations
